# dcds-rosti

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  generated_ir.ll
benchmarks/: CMakeLists.txt
benchmarks/data-structures/: CMakeLists.txt
benchmarks/data-structures/include/baseline/list/: lru-list-global-lock.hpp  lru-list-tbb.hpp
benchmarks/data-structures/include/dcds-generated/: base.hpp  indexed-map.hpp
benchmarks/data-structures/include/dcds-generated/list/: doubly-linked-list.hpp  lru-list.hpp
benchmarks/data-structures/lib/dcds-generated/: indexed-map.cpp
benchmarks/data-structures/lib/dcds-generated/list/: doubly-linked-list-2.cpp  doubly-linked-list.cpp  fixed-size-doubly-linked-list.cpp  lru-list.cpp
benchmarks/microbenches/counter/: CMakeLists.txt  counter-main.cpp
benchmarks/microbenches/counter-based-ds/: 1counter-benchmark.cpp  3counter-benchmark.cpp  CMakeLists.txt  composable_lru_implementation.cpp  counter-based-ds.cpp  counter-benchmark.cpp  counter-example.cpp  doubly_connected_node.cpp  linked-list.cpp  lru-benchmark.cpp  lru_implementation.cpp  node.hpp  two-counter-example.cpp
benchmarks/microbenches/counter-based-ds/data-structures/: CMakeLists.txt  generated-counter-example.cpp
benchmarks/microbenches/counter-based-ds/data-structures/include/un-generated/: counter.hpp
benchmarks/microbenches/counter-based-ds/data-structures/lib/un-generated/: counter.cpp
benchmarks/microbenches/doubly-linked-list/: CMakeLists.txt  dll-benchmark.cpp
benchmarks/microbenches/example/: CMakeLists.txt  example-bench.cpp  example-main.cpp
benchmarks/microbenches/indexed-map/: CMakeLists.txt  indexed-map-main.cpp
benchmarks/microbenches/linked-list/: CMakeLists.txt  linked-list.cpp
benchmarks/microbenches/linked-list/dcds-impl/: list.hpp
benchmarks/microbenches/list-based-ds/: CMakeLists.txt  list-based-ds.cpp
benchmarks/microbenches/list-based-ds/data-structures/: CMakeLists.txt
benchmarks/microbenches/list-based-ds/data-structures/include/parser-generated/: doubly-linked-list.hpp  linked-list.hpp  queue.hpp
benchmarks/microbenches/list-based-ds/data-structures/include/un-generated/: linked-list.hpp  queue.hpp
benchmarks/microbenches/list-based-ds/data-structures/lib/parser-generated/: doubly-linked-list.cpp  linked-list.cpp  list.cpp
benchmarks/microbenches/list-based-ds/data-structures/lib/un-generated/: linked-list.cpp  queue.cpp
benchmarks/microbenches/lru-list/: CMakeLists.txt  lru-bench-util.hpp
benchmarks/microbenches/lru-list/dcds-lru/: CMakeLists.txt  lru-dcds-main.cpp
benchmarks/microbenches/lru-list/tbb-lru/: CMakeLists.txt  lru-bench-util.cpp  lru-bench-util.hpp  lru-tbb-benchmark.cpp
benchmarks/microbenches/play/: CMakeLists.txt  play-main.cpp
benchmarks/microbenches/tpcc/: CMakeLists.txt  TPCC-main.cpp  TPCC.cpp  TPCC.hpp
benchmarks/microbenches/ycsb/: CMakeLists.txt  YCSB-main.cpp  bench.sh  ycsb.hpp
dcds/: CMakeLists.txt
dcds/include/dcds/: dcds.hpp
dcds/include/dcds/builder/: attribute.hpp  builder.hpp  function-builder.hpp  operator.hpp  statement-builder.hpp  statement.hpp  storage.hpp  struct.hpp
dcds/include/dcds/builder/expressions/: binary-expressions.hpp  constant-expressions.hpp  expression-visitor.hpp  expressions.hpp  unary-expressions.hpp
dcds/include/dcds/builder/hints/: builder-hints.hpp
dcds/include/dcds/builder/optimizer/: builder-opt-passes.hpp  cc-injector.hpp
dcds/include/dcds/codegen/: DCDSJIT.hpp  codegen-v2.hpp  codegen.hpp  counter.hpp  utils.hpp
dcds/include/dcds/codegen/llvm-codegen/: functions.hpp  llvm-codegen-function.hpp  llvm-codegen-statement.hpp  llvm-codegen.hpp  llvm-context.hpp  llvm-jit.hpp  llvm-scoped-context.hpp
dcds/include/dcds/codegen/llvm-codegen/expression-codegen/: llvm-expression-visitor.hpp
dcds/include/dcds/common/: common.hpp  types.hpp
dcds/include/dcds/common/exceptions/: exception.hpp  storage-exceptions.hpp
dcds/include/dcds/context/: DCDSContext.hpp
dcds/include/dcds/exporter/: code-exporter.hpp  jit-container.hpp
dcds/include/dcds/indexes/: art-key.hpp  art-node.hpp  art.hpp  index-functions.hpp  index.hpp
dcds/include/dcds/storage/: attribute-def.hpp  storage-utils.hpp  table-registry.hpp  table.hpp
dcds/include/dcds/transaction/: transaction-manager.hpp  transaction-namespaces.hpp  transaction.hpp  txn-log.hpp  txn-table.hpp  txn-utils.hpp
dcds/include/dcds/transaction/concurrency-control/: cc.hpp  record-metadata.hpp
dcds/include/dcds/util/: affinity-manager.hpp  erase-constructor-idioms.hpp  intrinsic-macros.hpp  logging.hpp  packed-ptr.hpp  profiling.hpp  rdtsc.hpp  scoped.hpp  singleton.hpp  thread-runner.hpp  timing.hpp
dcds/include/dcds/util/bench-utils/: zipf-generator.hpp
dcds/include/dcds/util/locks/: guard.hpp  latch.hpp  lock.hpp  rw-lock.hpp  spin-lock.hpp
dcds/lib/: dcds.cpp
dcds/lib/builder/: builder-opt-passes.cpp  builder.cpp  cc-injector.cpp  function-builder.cpp  statement-builder.cpp  statement.cpp  storage.cpp
dcds/lib/builder/expressions/: expressions.cpp
dcds/lib/codegen/: codegen-v2.cpp  codegen.cpp
dcds/lib/codegen/llvm-codegen/: functions.cpp  llvm-codegen-function.cpp  llvm-codegen-statement.cpp  llvm-codegen.cpp  llvm-context.cpp  llvm-expression-visitor.cpp  llvm-jit.cpp  llvm-utils-conditionals.cpp  llvm-utils-loops.cpp
dcds/lib/common/: exceptions.cpp  types.cpp
dcds/lib/indexes/: art-node.cpp  index-functions.cpp
dcds/lib/storage/: table-registry.cpp  table.cpp
dcds/lib/transaction/: transaction-manager.cpp  transaction.cpp  txn-log.cpp
dcds/lib/util/: logging.cpp  profiling.cpp
dcds/test/: CMakeLists.txt  test-builder.cpp  test-function.cpp
dcds/test/data-structures/: counter.cpp
dcds/test/statements/: conditional-statements.cpp
dcds/util/: CMakeLists.txt
dcds/util/include/dcds/util/: logging.hpp  profiling.hpp
dcds/util/lib/: profiling.cpp
examples/: CMakeLists.txt  counter-based-ds.cpp  counter_example2.cpp  doubly_connected_node.cpp  lru_implementation.cpp  simple_node.cpp  two-counter-example.cpp
examples/counter/: counter.cpp
(+14 files in other folders)
